@@ -5,11 +5,13 @@ import com.buuz135.replication.api.IMatterType;
 import com.buuz135.replication.api.MatterType;
 import com.buuz135.replication.api.pattern.MatterPattern;
 import com.buuz135.replication.client.gui.addons.MatterPatternButton;
-import com.buuz135.replication.client.gui.addons.MatterTankDisplay;
+import com.buuz135.replication.client.gui.addons.TerminalMatterValueDisplay;
 import com.buuz135.replication.container.ReplicationTerminalContainer;
 import com.buuz135.replication.packet.MatterFluidSyncPacket;
 import com.buuz135.replication.packet.PatternSyncStoragePacket;
 import com.buuz135.replication.packet.TaskCreatePacket;
+import com.hrznstudio.titanium.network.locator.instance.TileEntityLocatorInstance;
+import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.EditBox;
@@ -20,25 +22,32 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.Mth;
 import net.minecraft.world.entity.player.Inventory;
+import net.minecraft.world.item.ItemStack;
 
+import java.awt.*;
+import java.util.List;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class ReplicationTerminalScreen extends AbstractContainerScreen<ReplicationTerminalContainer> {
 
-    private static ResourceLocation TEXTURE = new ResourceLocation(Replication.MOD_ID, "textures/gui/replication_terminal.png");
+    public static ResourceLocation TEXTURE = new ResourceLocation(Replication.MOD_ID, "textures/gui/replication_terminal.png");
 
     private EditBox searchBox;
     private PatternMenu patternMenu;
     private float scrollOffs;
     private boolean scrolling;
-    private List<MatterTankDisplay> matterTankDisplays;
+    private List<TerminalMatterValueDisplay> terminalMatterValueDisplays;
     private ReplicationRequestWidget replicationRequestWidget;
+    private ReplicationTerminalConfigButton sortingType;
+    private ReplicationTerminalConfigButton sortingDirection;
 
     public ReplicationTerminalScreen(ReplicationTerminalContainer container, Inventory inventory, Component component) {
         super(container, inventory, component);
-        this.imageWidth = 220;
+        this.imageWidth = 195;
         this.imageHeight = 256;
         this.inventoryLabelY = 124;
+        this.titleLabelY = -10;
     }
 
     @Override
@@ -51,8 +60,36 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
         this.searchBox.setTextColor(16777215);
         this.addWidget(this.searchBox);
 
+
+        this.addRenderableWidget(this.sortingType = new ReplicationTerminalConfigButton(this.leftPos - 18, this.topPos + 4, 16, 16, new TileEntityLocatorInstance(menu.getPosition()), ReplicationTerminalConfigButton.Type.SORTING_TYPE, this.menu.getSortingType()) {
+            @Override
+            public void onPress() {
+                super.onPress();
+                scrollOffs = 0;
+                patternMenu.scrollTo(0);
+            }
+
+            @Override
+            protected void renderWidget(GuiGraphics guiGraphics, int pMouseX, int pMouseY, float pPartialTick) {
+                if (replicationRequestWidget == null) super.renderWidget(guiGraphics, pMouseX, pMouseY, pPartialTick);
+            }
+        });
+        this.addRenderableWidget(this.sortingDirection = new ReplicationTerminalConfigButton(this.leftPos - 18, this.topPos + 4 + 18, 16, 16, new TileEntityLocatorInstance(menu.getPosition()), ReplicationTerminalConfigButton.Type.SORTING_DIRECTION, this.menu.getSortingValue()) {
+            @Override
+            public void onPress() {
+                super.onPress();
+                scrollOffs = 0;
+                patternMenu.scrollTo(0);
+            }
+
+            @Override
+            protected void renderWidget(GuiGraphics guiGraphics, int pMouseX, int pMouseY, float pPartialTick) {
+                if (replicationRequestWidget == null) super.renderWidget(guiGraphics, pMouseX, pMouseY, pPartialTick);
+            }
+        });
+
         this.patternMenu = new PatternMenu();
-        this.matterTankDisplays = new ArrayList<>();
+        this.terminalMatterValueDisplays = new ArrayList<>();
 
         this.refreshPatterns();
         this.refreshTanks();
@@ -73,25 +110,26 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
         int y = this.topPos;
 
 
-        if (this.replicationRequestWidget != null){
+        if (this.replicationRequestWidget != null) {
             this.replicationRequestWidget.renderWidget(guiGraphics, mouseX, mouseY, v);
         } else {
             guiGraphics.blit(TEXTURE, x, y, 0, 0, this.imageWidth, this.imageHeight);
+            guiGraphics.blit(new ResourceLocation(Replication.MOD_ID, "textures/gui/replication_terminal_extras.png"), x + this.imageWidth, y + 4, 0, 0, 59, 63);
             this.searchBox.render(guiGraphics, mouseX, mouseY, v);
 
             int j = this.leftPos + 175;
             int k = this.topPos + 18;
             int i = k + 90;
 
-            guiGraphics.blit(TEXTURE, j, k + (int)((float)(i - k - 17) * this.scrollOffs), 232 + (this.patternMenu.canScroll() ? 0 : 12), 0, 12, 15);
+            guiGraphics.blit(TEXTURE, j, k + (int) ((float) (i - k - 17) * this.scrollOffs), 232 + (this.patternMenu.canScroll() ? 0 : 12), 0, 12, 15);
 
             for (int matterButtonIndex = 0; matterButtonIndex < this.patternMenu.visibleButtons.size(); matterButtonIndex++) {
                 var patternButton = this.patternMenu.visibleButtons.get(matterButtonIndex);
-                patternButton.render(guiGraphics, this.leftPos + (matterButtonIndex % 9)*18 + 9, this.topPos + (matterButtonIndex / 9)*18 + 18, mouseX, mouseY);
+                patternButton.render(guiGraphics, this.leftPos + (matterButtonIndex % 9) * 18 + 9, this.topPos + (matterButtonIndex / 9) * 18 + 18, mouseX, mouseY);
             }
-            for (int displayIndex = 0; displayIndex < this.matterTankDisplays.size(); displayIndex++) {
-                var matterTankDisplay = this.matterTankDisplays.get(displayIndex);
-                matterTankDisplay.render(guiGraphics, this.leftPos + this.getXSize() -23, this.topPos + displayIndex*20 + 10, mouseX, mouseY);
+            for (int displayIndex = 0; displayIndex < this.terminalMatterValueDisplays.size(); displayIndex++) {
+                var matterTankDisplay = this.terminalMatterValueDisplays.get(displayIndex);
+                matterTankDisplay.render(guiGraphics, this.leftPos + this.getXSize() + (displayIndex % 3) * 18 , this.topPos + (displayIndex / 3) * 18 + 7, mouseX, mouseY);
             }
         }
     }
@@ -100,16 +138,25 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
     protected void containerTick() {
         super.containerTick();
         this.searchBox.tick();
+        var shouldSort = false;
         for (MatterPatternButton matterPatternButton : this.patternMenu.matterPatternButtonList) {
-            if (matterPatternButton.cachedAmount() == -1 && (matterPatternButton.createdWhen() + 1*20) < Minecraft.getInstance().level.getGameTime()){
-                matterPatternButton.recalculateAmount(this.menu.getNetwork());
+            if (matterPatternButton.isShouldDisplayAnimation() && (matterPatternButton.createdWhen() + 20) < Minecraft.getInstance().level.getGameTime()) {
+                matterPatternButton.setShouldDisplayAnimation(false);
+                shouldSort = true;
             }
+        }
+        if (shouldSort) {
+            scrollOffs = 0;
+            patternMenu.scrollTo(0);
         }
     }
 
     @Override
     protected void renderLabels(GuiGraphics pGuiGraphics, int pMouseX, int pMouseY) {
-        if (this.replicationRequestWidget == null) super.renderLabels(pGuiGraphics, pMouseX, pMouseY);
+        if (this.replicationRequestWidget == null) {
+            pGuiGraphics.drawString(this.font, this.title.copy().withStyle(ChatFormatting.WHITE), this.titleLabelX + 40, this.titleLabelY, Color.WHITE.getRGB(), true);
+            pGuiGraphics.drawString(this.font, this.playerInventoryTitle, this.inventoryLabelX, this.inventoryLabelY, 4210752, false);
+        }
     }
 
     protected boolean insideScrollbar(double p_98524_, double p_98525_) {
@@ -150,7 +197,7 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
     @Override
     public boolean mouseClicked(double pMouseX, double pMouseY, int pButton) {
         if (pButton == 0) {
-            if (this.replicationRequestWidget == null){
+            if (this.replicationRequestWidget == null) {
                 if (this.insideScrollbar(pMouseX, pMouseY)) {
                     this.scrolling = this.patternMenu.canScroll();
                     int i = this.topPos + 18;
@@ -160,7 +207,7 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
                     this.patternMenu.scrollTo(this.scrollOffs);
                     return true;
                 }
-                if (this.patternMenu.mouseClicked(pMouseX, pMouseY, pButton)){
+                if (this.patternMenu.mouseClicked(pMouseX, pMouseY, pButton)) {
                     return true;
                 }
             }
@@ -176,10 +223,11 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
         }
         return super.mouseReleased(p_98622_, p_98623_, p_98624_);
     }
+
     @Override
     public boolean charTyped(char pCodePoint, int pModifiers) {
         String s = this.searchBox.getValue();
-        if (this.replicationRequestWidget == null){
+        if (this.replicationRequestWidget == null) {
             if (this.searchBox.charTyped(pCodePoint, pModifiers)) {
                 if (!Objects.equals(s, this.searchBox.getValue())) {
                     this.patternMenu.scrollTo(0f);
@@ -202,64 +250,70 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
     @Override
     public boolean keyPressed(int p_98547_, int p_98548_, int p_98549_) {
         String s = this.searchBox.getValue();
-        if (this.replicationRequestWidget == null){
+        if (this.replicationRequestWidget == null) {
             if (this.searchBox.keyPressed(p_98547_, p_98548_, p_98549_)) {
                 if (!Objects.equals(s, this.searchBox.getValue())) {
                     this.patternMenu.scrollTo(0f);
                 }
                 return true;
             } else {
-                return this.searchBox.isFocused() && this.searchBox.isVisible() && p_98547_ != 256 ? true : super.keyPressed(p_98547_, p_98548_, p_98549_);
+                return this.searchBox.isFocused() && this.searchBox.isVisible() && p_98547_ != 256 || super.keyPressed(p_98547_, p_98548_, p_98549_);
             }
         } else {
             if (this.replicationRequestWidget.getAmountBox().keyPressed(p_98547_, p_98548_, p_98549_)) {
                 return true;
             } else {
-                return this.replicationRequestWidget.getAmountBox().isFocused() && this.replicationRequestWidget.getAmountBox().isVisible() && p_98547_ != 256 ? true : super.keyPressed(p_98547_, p_98548_, p_98549_);
+                return this.replicationRequestWidget.getAmountBox().isFocused() && this.replicationRequestWidget.getAmountBox().isVisible() && p_98547_ != 256 || super.keyPressed(p_98547_, p_98548_, p_98549_);
             }
         }
 
     }
 
     public void refreshPatterns() {
-        this.patternMenu.matterPatternButtonList = PatternSyncStoragePacket.CLIENT_PATTERN_STORAGE.getOrDefault(this.menu.getNetwork(), new HashMap<>())
-                .values().stream().flatMap(Collection::stream).map(stack -> new MatterPatternButton(new MatterPattern(stack, 1), -1, Minecraft.getInstance().level.getGameTime())).toList();
+        this.patternMenu.matterPatternButtonList = new ArrayList<>();
+        List<ItemStack> existing = new ArrayList<>();
+        var temp = PatternSyncStoragePacket.CLIENT_PATTERN_STORAGE.getOrDefault(this.menu.getNetwork(), new HashMap<>())
+                .values().stream().flatMap(Collection::stream).map(stack -> new MatterPatternButton(new MatterPattern(stack, 1), -1, Minecraft.getInstance().level.getGameTime(), this.menu.getNetwork())).collect(Collectors.toList());
+        for (MatterPatternButton matterPatternButton : temp) {
+            if (existing.stream().noneMatch(o -> ItemStack.isSameItemSameTags(o, matterPatternButton.pattern().getStack()))) {
+                this.patternMenu.matterPatternButtonList.add(matterPatternButton);
+                existing.add(matterPatternButton.pattern().getStack());
+            }
+        }
         this.patternMenu.scrollTo(this.scrollOffs);
     }
 
     public void refreshTanks() {
-        this.matterTankDisplays = new ArrayList<>();
+        this.terminalMatterValueDisplays = new ArrayList<>();
         var entries = MatterFluidSyncPacket.CLIENT_MATTER_STORAGE.get(this.menu.getNetwork());
         for (IMatterType value : MatterType.values()) {
             if (value.equals(MatterType.EMPTY)) continue;
-            this.matterTankDisplays.add(new MatterTankDisplay(value, entries.getOrDefault(value, 0L)));
+            this.terminalMatterValueDisplays.add(new TerminalMatterValueDisplay(value, entries.getOrDefault(value, 0L)));
         }
         for (MatterPatternButton matterPatternButton : this.patternMenu.matterPatternButtonList) {
-            if (matterPatternButton.cachedAmount() != -1){
-                matterPatternButton.recalculateAmount(this.menu.getNetwork());
-            }
+            matterPatternButton.recalculateAmount(this.menu.getNetwork());
         }
     }
 
-    public void enableRequest(ReplicationRequestWidget widget){
+    public void enableRequest(ReplicationRequestWidget widget) {
         this.replicationRequestWidget = widget;
         this.menu.setEnabled(false);
         this.replicationRequestWidget.getWidgets().forEach(this::addWidget);
     }
 
-    public void disableRequest(){
+    public void disableRequest() {
         this.replicationRequestWidget.getWidgets().forEach(abstractWidget -> this.children().remove(abstractWidget));
         this.replicationRequestWidget = null;
         this.menu.setEnabled(true);
     }
 
-    public void createTask(MatterPattern pattern, int i, boolean singleMode){
-        Replication.NETWORK.get().sendToServer(new TaskCreatePacket(this.menu.getNetwork(), i, pattern.getStack(), singleMode, this.menu.getPosition()));
+    public void createTask(MatterPattern pattern, int i, boolean parallelMode) {
+        Replication.NETWORK.get().sendToServer(new TaskCreatePacket(this.menu.getNetwork(), i, pattern.getStack(), parallelMode, this.menu.getPosition()));
         disableRequest();
     }
 
 
-    public class PatternMenu  {
+    public class PatternMenu {
         public List<MatterPatternButton> matterPatternButtonList = new ArrayList<>();
         public List<MatterPatternButton> visibleButtons = new ArrayList<>();
 
@@ -273,23 +327,32 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
         }
 
         protected int getRowIndexForScroll(float p_259664_) {
-            return Math.max((int)((double)(p_259664_ * (float)this.calculateRowCount()) + 0.5), 0);
+            return Math.max((int) ((double) (p_259664_ * (float) this.calculateRowCount()) + 0.5), 0);
         }
 
         protected float getScrollForRowIndex(int p_259315_) {
-            return Mth.clamp((float)p_259315_ / (float)this.calculateRowCount(), 0.0F, 1.0F);
+            return Mth.clamp((float) p_259315_ / (float) this.calculateRowCount(), 0.0F, 1.0F);
         }
 
         protected float subtractInputFromScroll(float p_259841_, double p_260358_) {
-            return Mth.clamp(p_259841_ - (float)(p_260358_ / (double)this.calculateRowCount()), 0.0F, 1.0F);
+            return Mth.clamp(p_259841_ - (float) (p_260358_ / (double) this.calculateRowCount()), 0.0F, 1.0F);
         }
 
         public void scrollTo(float p_98643_) {
             int i = this.getRowIndexForScroll(p_98643_);
             this.visibleButtons = new ArrayList<>();
             var filtered = getFilteredPatterns();
-            for(int j = 0; j < 5; ++j) {
-                for(int k = 0; k < 9; ++k) {
+            Comparator<MatterPatternButton> comparator = Comparator.comparingInt(MatterPatternButton::cachedAmount);
+            if (ReplicationTerminalScreen.this.sortingType.getState() == 1) {
+                comparator = Comparator.comparing(matterPatternButton -> matterPatternButton.pattern().getStack().getDisplayName().getString().toLowerCase());
+                comparator = comparator.reversed();
+            }
+            if (ReplicationTerminalScreen.this.sortingDirection.getState() == 1) {
+                comparator = comparator.reversed();
+            }
+            filtered.sort(comparator);
+            for (int j = 0; j < 5; ++j) {
+                for (int k = 0; k < 9; ++k) {
                     int l = k + (j + i) * 9;
                     if (l >= 0 && l < filtered.size()) {
                         this.visibleButtons.add(filtered.get(l));
@@ -305,16 +368,16 @@ public class ReplicationTerminalScreen extends AbstractContainerScreen<Replicati
             return getFilteredPatterns().size() > 45;
         }
 
-        private List<MatterPatternButton> getFilteredPatterns(){
+        private List<MatterPatternButton> getFilteredPatterns() {
             var textValue = ReplicationTerminalScreen.this.searchBox.getValue().toLowerCase();
             if (textValue.isBlank()) return this.matterPatternButtonList;
-            return this.matterPatternButtonList.stream().filter(matterPatternButton -> matterPatternButton.pattern().getStack().getDisplayName().getString().toLowerCase().contains(textValue)).toList();
+            return this.matterPatternButtonList.stream().filter(matterPatternButton -> matterPatternButton.pattern().getStack().getDisplayName().getString().toLowerCase().contains(textValue)).collect(Collectors.toList());
         }
 
         public boolean mouseClicked(double pMouseX, double pMouseY, int pButton) {
             for (int matterButtonIndex = 0; matterButtonIndex < this.visibleButtons.size(); matterButtonIndex++) {
-                if (pMouseX > ReplicationTerminalScreen.this.leftPos + (matterButtonIndex % 9)*18 + 9 && pMouseX < ReplicationTerminalScreen.this.leftPos + (matterButtonIndex % 9)*18 + 9 + 18
-                        && pMouseY > ReplicationTerminalScreen.this.topPos + (matterButtonIndex / 9)*18 + 18 && pMouseY < ReplicationTerminalScreen.this.topPos + (matterButtonIndex / 9)*18 + 18 + 18){
+                if (pMouseX > ReplicationTerminalScreen.this.leftPos + (matterButtonIndex % 9) * 18 + 9 && pMouseX < ReplicationTerminalScreen.this.leftPos + (matterButtonIndex % 9) * 18 + 9 + 18
+                        && pMouseY > ReplicationTerminalScreen.this.topPos + (matterButtonIndex / 9) * 18 + 18 && pMouseY < ReplicationTerminalScreen.this.topPos + (matterButtonIndex / 9) * 18 + 18 + 18) {
                     var patternButton = this.visibleButtons.get(matterButtonIndex);
                     ReplicationTerminalScreen.this.enableRequest(new ReplicationRequestWidget((ReplicationTerminalScreen.this.width - 177) / 2,
                             (ReplicationTerminalScreen.this.height - 102) / 2, 177, 102, Component.translatable("replication.request_amount"), patternButton, ReplicationTerminalScreen.this));
